@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 00:18:42 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 00:20:58 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
@@ -19,5 +19,11 @@
   <description>ATEEZ擴大歐洲巡迴演唱會至14場韓國男子組合ATEEZ將在歐洲舉行的巡迴演唱會場次增加至14場新增倫敦和柏林兩場演出這是他們朝向光明權力之旅巡迴演唱會TowardstheLightWilltoPowertour的一部分該巡迴演唱會已於今年夏天在美國和加拿大十個城市舉行並將於明年一月在...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 00:18:42 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR四大天團齊發新專輯與巡演.html</link>
+  <description>樂隊熱潮席捲韓國音樂界韓國樂隊正在席捲當地音樂榜單尤其是JYP娛樂旗下的流行搖滾樂隊DAY6韓語데이식스DeiSigseu截至上週五DAY6的四首舊曲和新曲均躋身Melon音樂榜單前十名其中Happy和WelcometotheShow分別佔據榜單第一和第三名而MeltDown和TimeofOurLife則穩居第四和第六名DAY6並非新晉樂隊但自...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 00:20:58 +0800</pubDate>
 </item></channel>
 </rss>
