@@ -4,3 +4,4 @@ https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-se
 https://tokyocheapo.com/entertainment/event-posts/the-biggest-autumn-fireworks-festival-returns-to-tokyo-this-week/
 https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241007050635
+https://www.koreaherald.com/view.php?ud=20241010050640
